[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyngx"
version = "3.6.0"
description = "Python3 BingX Rate-Limit-Aware Asyncio HTTP/WebSocket API Connector"
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3.8"
license = {text = "MIT License"}
authors = [
    {name = "APF20", email = ""}
]
keywords = ["bingx", "api", "connector", "asyncio", "rate-limit-aware"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "aiohttp>=3.8.1",
]

[project.urls]
Repository = "https://github.com/APF20/pyngx"
Homepage = "https://github.com/APF20/pyngx"

[tool.setuptools.package-dir]
"" = "src"
